--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/branch-example --mode development",
+    "build": "NODE_ENV=development vite build --base=/branch-example --mode development",
     "preview": "vite preview"
   },
   "dependencies": {
